---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\n@external(javascript, \"\", \"one\")\npub fn one(x: Int) -> Int {\n  1\n}\n"
---
error: Invalid JavaScript module
  ┌─ /src/one/two.rakun:3:1
  │
3 │ pub fn one(x: Int) -> Int {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The function `one` has an external JavaScript implementation but the module
path `` is not valid.
